# SecurePad

./: .gitignore  LICENSE  README.md  REPORTE_AUDITORIA.md  USER_MANUAL.md  asdasd.key  index.html  koltin.spd  nota2.spd  package-lock.json  package.json  temp_cr.py  temp_git_log.txt  temp_tc.py  wordpress12222.spd
.github/workflows/: build.yml  release.yml
notas/: asd1.spd  asdasd.spd  koltin.spd  nota.spd  nota2.spd
src/: App.tsx  BUILD_GUIDE.md  Editor.tsx  Setup.tsx  Unlock.tsx  app.py  crypto_engine.py  index.css  main.py  pyproject.toml  requirements.txt  test_crypto.py
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto_engine.rs  lib.rs  main.rs
src/components/: LockScreenOverlay.tsx  SaveVaultModal.tsx  SettingsModal.tsx  Toolbar.tsx
src/securepad/: __init__.py  app.py  crypto_engine.py  panels.py  test_scroll.py
